books:items fix overflow

--- a/main/static/main/css/tables.css
+++ b/main/static/main/css/tables.css
@@ -1,4 +1,4 @@
-section.table {
+.overflow {
     overflow: auto;
 }
 
